--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,11 @@
     "ejs": "^3.1.5",
     "express.js": "^1.0.0",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "pg": "8.7.1",
+    "redis": "4.0.0-next.5"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.6.1"
   }
 }
