--- a/worker/package.json
+++ b/worker/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "redis":"3.1.2",
+        "redis": "4.0.0-next.5",
         "nodemon":"2.0.12"
     },
     "scripts": {
