--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,15 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t borba/app -f Dockerfile.dev .
+  #- docker build -t borba/app -f Dockerfile.dev .
   # - docker build -t borba/app -f ./client/Dockerfile.dev ./client
-  # - docker-compose build
+  - docker-compose build
 script:
   # - docker-compose run -d server npm run start
-  # - docker-compose run -e CI=true client npm run test
-  - docker run -e CI=true borba/app npm run test # test
+  - docker-compose up
+  - docker-compose exec -e CI=true client npm run test
+  #- docker-compose run -e CI=true client npm run test
+  # docker run -e CI=true borba/app npm run test # test
   # test?
 deploy:
   provider: heroku
