--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,5 +9,5 @@ COPY ./package.json ./
 RUN npm install
 COPY ./ ./
 
-CMD ["npm","run","dev"]
+CMD ["npm","run","start"]
 #CMD ["npm","run","start"]
