--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
         restart: always
         build: 
             context: ./nginx
-            dockerfile: Dockerfile
+            dockerfile: Dockerfile.dev
         ports: 
             - "8000:80"
         depends_on:
@@ -37,14 +37,14 @@ services:
         stdin_open: true
         build:
             context: "./client"
-            dockerfile: Dockerfile
+            dockerfile: Dockerfile.dev
         restart: on-failure
         volumes:
             - /client/node_modules
             - ./client:/client
         depends_on:
             - api
-        command: npm run test
+        
     postgres:
         image: 'postgres:alpine3.14'
         environment:
