add Nginx port yet again

--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
-  listen ${PORT};
-
+  listen process.env.PORT;
+  
   location / {
     root /usr/share/nginx/html;
     index index.html index.htm;
