--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
   listen process.env.port;
-  
+  server_name dockerc.herokuapp.com;
   location / {
     root /usr/share/nginx/html;
     index index.html index.htm;
