--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,18 @@
 upstream client {
-  server client:3000;
+  server $HEROKU_CLIENT;
 }
 
 upstream api {
-  server api:9000;
+  server $HEROKU_API;
 }
 
 server {
-  listen 80;
+  listen $PORT;
 
   location / {
     try_files $uri $uri/ /index.html;
     proxy_pass http://client;
+    proxy_set_header Host $HEROKU_CLIENT;
   }
 
   location /sockjs-node {
@@ -24,5 +25,6 @@ server {
   location /api {
     rewrite /api/(.*) /$1 break;
     proxy_pass http://api;
+    proxy_set_header Host $HEROKU_API;
   }
 }
