--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,9 @@
 upstream client {
-  server $HEROKU_CLIENT;
+  server $HEROKU_CLIENT_URL;
 }
 
 upstream api {
-  server $HEROKU_API;
+  server $HEROKU_APi_URL;
 }
 
 server {
