--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
 before_install:
   - wget -qO- https://toolbelt.heroku.com/install.sh | sh
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - echo "f393f4b3-d762-4f20-b704-8aaf7558073e" | docker login -u "$HEROKU_USERNAME" --password-stdin registry.heroku.com
+  - echo "$HEROKU_PASSWORD" | docker login -u "$HEROKU_USERNAME" --password-stdin registry.heroku.com
 
 script:
   - docker build -t $DOCKER_USERNAME/docker_client ./frontend_heroku;
