--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ upstream client {
 }
 
 upstream api {
-  server $HEROKU_APi_URL;
+  server $HEROKU_API_URL;
 }
 
 server {
@@ -12,7 +12,7 @@ server {
   location / {
     try_files $uri $uri/ /index.html;
     proxy_pass http://client;
-    proxy_set_header Host $HEROKU_CLIENT;
+    proxy_set_header Host $HEROKU_CLIENT_URL;
   }
 
   location /sockjs-node {
@@ -25,6 +25,6 @@ server {
   location /api {
     rewrite /api/(.*) /$1 break;
     proxy_pass http://api;
-    proxy_set_header Host $HEROKU_API;
+    proxy_set_header Host $HEROKU_API_URL;
   }
 }
