--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,9 +2,9 @@ upstream client {
   server $HEROKU_CLIENT_URL;
 }
 
-upstream api {
-  server $HEROKU_API_URL;
-}
+# upstream api {
+#   server $HEROKU_API_URL;
+# }
 
 server {
   listen $PORT;
@@ -15,11 +15,9 @@ server {
     proxy_set_header Host $HEROKU_CLIENT_URL;
   }
 
-  
-
-  location /api {
-    rewrite /api/(.*) /$1 break;
-    proxy_pass http://api;
-    proxy_set_header Host $HEROKU_API_URL;
-  }
+  # location /api {
+  #   rewrite /api/(.*) /$1 break;
+  #   proxy_pass http://api;
+  #   proxy_set_header Host $HEROKU_API_URL;
+  # }
 }
