--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,9 @@
 upstream client {
-  server $HEROKU_CLIENT_URL;
+  server process.env.HEROKU_CLIENT_URL;
 }
 
 upstream api {
-  server $HEROKU_API_URL;
+  server process.env.HEROKU_API_URL;
 }
 
 server {
@@ -11,11 +11,11 @@ server {
 
   location / {
     proxy_pass http://client;
-    proxy_set_header Host $HEROKU_CLIENT_URL;
+    proxy_set_header Host process.env.HEROKU_CLIENT_URL;
   }
 
   location /api {
     proxy_pass http://api;
-    proxy_set_header Host $HEROKU_API_URL;
+    proxy_set_header Host process.env.HEROKU_API_URL;
   }
 }
