--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,21 +1,23 @@
 upstream client {
-  server process.env.HEROKU_CLIENT_URL;
+  server $HEROKU_CLIENT_URL;
 }
 
 upstream api {
-  server process.env.HEROKU_API_URL;
+  server $HEROKU_API_URL;
 }
 
 server {
   listen $PORT;
 
   location / {
+    # try_files $uri $uri/ /index.html;
     proxy_pass http://client;
-    proxy_set_header Host process.env.HEROKU_CLIENT_URL;
+    proxy_set_header Host $HEROKU_CLIENT_URL;
   }
 
   location /api {
+    # rewrite /api/(.*) /$1 break;
     proxy_pass http://api;
-    proxy_set_header Host process.env.HEROKU_API_URL;
+    proxy_set_header Host $HEROKU_API_URL;
   }
 }
