--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,13 +10,20 @@ server {
   listen $PORT;
 
   location / {
-    # try_files $uri $uri/ /index.html;
+    try_files $uri $uri/ /index.html;
     proxy_pass http://client;
     proxy_set_header Host $HEROKU_CLIENT_URL;
   }
 
+  location /sockjs-node {
+    proxy_pass http://client;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+  }
+
   location /api {
-    # rewrite /api/(.*) /$1 break;
+    rewrite /api/(.*) /$1 break;
     proxy_pass http://api;
     proxy_set_header Host $HEROKU_API_URL;
   }
