--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -3,10 +3,9 @@ FROM php:7.4-apache
 WORKDIR '/client'
 RUN apt-get update
 RUN apt-get install gettext-base
-RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
+RUN mkdir "mysql" && docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 # COPY "/php/src" "/var/www/html/"
-ADD . /client
-RUN chown -R www-data:www-data /client
+# RUN chown -R www-data:www-data /mysql
 EXPOSE 80
 CMD /bin/bash -c "envsubst '\$herokusqlHost,\$herokusqlDatabase,\$herokusqlPassword,\$herokusqlUser' < /var/www/html/php/conexao.php > /var/www/html/php/conexao.php" && apachectl -D FOREGROUND
 
