--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -4,7 +4,8 @@ WORKDIR '/client'
 RUN apt-get update
 RUN apt-get install gettext-base
 RUN mkdir "mysql" && cd "mysql" 
-RUN bin/bash -c "docker-php-ext-install mysqli" && "docker-php-ext-enable mysqli"
+RUN docker-php-ext-install mysqli
+RUN docker-php-ext-enable mysqli
 # COPY "/php/src" "/var/www/html/"
 # RUN chown -R www-data:www-data /mysql
 EXPOSE 80
