--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -2,6 +2,7 @@ FROM php:7.4-apache
 
 WORKDIR '/client'
 RUN apt-get update
+RUN apt-get upgrade
 RUN apt-get install gettext-base
 RUN apt-get install php7.2-mysql && docker-php-ext-enable mysqli
 # COPY "/php/src" "/var/www/html/"
