--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get install gettext-base
 RUN apt-get install php7.2-mysql && docker-php-ext-enable mysqli
 # COPY "/php/src" "/var/www/html/"
 # RUN chown -R www-data:www-data /mysql
+# giid
 EXPOSE 80
 CMD /bin/bash -c "envsubst '\$herokusqlHost,\$herokusqlDatabase,\$herokusqlPassword,\$herokusqlUser' < /var/www/html/php/conexao.php > /var/www/html/php/conexao.php" && apachectl -D FOREGROUND
 
