--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -1,10 +1,10 @@
 FROM php:7.4-apache
 
 WORKDIR '/client'
-RUN apt-get update
-RUN apt-get upgrade
-RUN apt-get install gettext-base
-RUN apt-get install php7.4-mysql && docker-php-ext-enable mysqli
+# RUN apt-get update
+# RUN apt-get upgrade
+RUN apk add install gettext-base
+RUN apk add install php7.4-mysql && docker-php-ext-enable mysqli
 # COPY "/php/src" "/var/www/html/"
 # RUN chown -R www-data:www-data /mysql
 # giid
