--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -3,8 +3,8 @@ FROM php:7.4-apache
 WORKDIR '/client'
 # RUN apt-get update
 # RUN apt-get upgrade
-RUN apk add install gettext-base
-RUN apk add install php7.4-mysql && docker-php-ext-enable mysqli
+RUN apk add --no-cache gettext-base
+RUN apk add --no-cache php7.4-mysql && docker-php-ext-enable mysqli
 # COPY "/php/src" "/var/www/html/"
 # RUN chown -R www-data:www-data /mysql
 # giid
