--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -1,13 +1,14 @@
-FROM phpearth/php:7.4-apache
+FROM php:7.4-apache
+RUN adduser --system --group --no-create-home appuser
 
 WORKDIR '/client'
-# RUN apt-get update
-# RUN apt-get upgrade
-RUN "apk add --no-cache gettext-base"
-RUN "apk add --no-cache php7.4-mysql" && "docker-php-ext-enable mysqli"
+RUN apt-get update
+RUN apt-get install gettext-base
+# RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 # COPY "/php/src" "/var/www/html/"
 # RUN chown -R www-data:www-data /mysql
 # giid
 EXPOSE 80
+USER appuser
 CMD /bin/bash -c "envsubst '\$herokusqlHost,\$herokusqlDatabase,\$herokusqlPassword,\$herokusqlUser' < /var/www/html/php/conexao.php > /var/www/html/php/conexao.php" && apachectl -D FOREGROUND
 
