--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -3,7 +3,7 @@ FROM php:7.4-apache
 RUN cd '/var'
 RUN apt-get update
 RUN apt-get install gettext-base
-RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
+# RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 
 # COPY ./deb-packs/php7-common.deb ./
 ## O problema : Travis não consegue rodar o comando : docker-php-ext-install, por isso é necessário pegar todos os pacotes do deb e instalar, após passar para a pasta de inis
