--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
             dockerfile: Dockerfile.dev
         restart: on-failure
         volumes:
-            - ./client/php:/client
+            - ./client/php/src:/var/www/html/
+            - ./client/apache-server/php.ini:/usr/local/etc/php/conf.d/php.ini
 
             
     nginx:
