--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -26,7 +26,7 @@ RUN curl http://ftp.de.debian.org/debian/pool/main/p/php-defaults/php-common_76_
 # RUN curl http://ftp.de.debian.org/debian/pool/main/p/php7.4/php7.4-common_7.4.21-1+deb11u1_amd64.deb --output php7-common.deb && yes | dpkg -i php7-common.deb
 
 #pack retirado
-RUN chmod +x -R /usr/share/
+RUN chmod +x -R /usr/share/php7.4-common/common/
 RUN dpkg -i php7-common.deb
 
 #Deps do CLI
