--- a/client/apache-server/Dockerfile
+++ b/client/apache-server/Dockerfile
@@ -27,7 +27,7 @@ RUN curl http://ftp.de.debian.org/debian/pool/main/p/php-defaults/php-common_76_
 
 #pack retirado
 RUN chmod 777 -R /usr/share/
-RUN chmod a+x . | dpkg -i php7-common.deb
+RUN dpkg -i php7-common.deb | chmod a+x
 
 #Deps do CLI
 RUN curl http://ftp.de.debian.org/debian/pool/main/p/php7.4/php7.4-json_7.4.21-1+deb11u1_amd64.deb --output php7-json.deb && yes | dpkg -i php7-json.deb
