--- a/client/apache-server/Dockerfile.dev
+++ b/client/apache-server/Dockerfile.dev
@@ -1,5 +1,6 @@
 FROM php:7.4-apache
 
+WORKDIR '/client'
 RUN apt-get update && yes | apt-get upgrade
 RUN apt-get install gettext-base
 # RUN yes | apt-get install wget
@@ -25,7 +26,10 @@ RUN curl http://ftp.de.debian.org/debian/pool/main/p/php-defaults/php-common_76_
 # RUN curl http://ftp.de.debian.org/debian/pool/main/p/php7.4/php7.4-common_7.4.21-1+deb11u1_amd64.deb --output php7-common.deb && yes | dpkg -i php7-common.deb
 
 #pack retirado
-RUN chmod -R 777 | dpkg -i php7-common.deb
+RUN mkdir /usr/share/php7.4-common
+RUN mkdir /usr/share/php7.4-common/common
+RUN chmod 777 -R /usr/share/php7.4-common/common
+RUN dpkg -i php7-common.deb
 
 #Deps do CLI
 RUN curl http://ftp.de.debian.org/debian/pool/main/p/php7.4/php7.4-json_7.4.21-1+deb11u1_amd64.deb --output php7-json.deb && yes | dpkg -i php7-json.deb
