ultima tentativa com php7.4-apache

--- a/client/apache-server/Dockerfile.dev
+++ b/client/apache-server/Dockerfile.dev
@@ -29,8 +29,10 @@ RUN curl http://ftp.de.debian.org/debian/pool/main/p/php-defaults/php-common_76_
 RUN mkdir /usr/share/php7.4-common
 RUN mkdir /usr/share/php7.4-common/common
 RUN touch /usr/share/php7.4-common/common/calendar.ini 
+RUN mkdir /etc/php/7.4/mods-available/calendar.ini < aqui
 RUN chmod 777 -R /usr/share/php7.4-common/common/calendar.ini
 RUN dpkg -i php7-common.deb
+
 
 #Deps do CLI
 RUN curl http://ftp.de.debian.org/debian/pool/main/p/php7.4/php7.4-json_7.4.21-1+deb11u1_amd64.deb --output php7-json.deb && yes | dpkg -i php7-json.deb
