Preparar merge com main/ remodelar API

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,13 +1,12 @@
 #
 FROM node:16.5.0-alpine3.11
 
-# WORK FOLDER
+# Aqui vai se localizar a área de trabalho
 WORKDIR "/api" 
 
-# Copy first the package json, else it will rerun ALL the install's, bad idea nonetheless.
+# Primeiro é copiado o package json para não ser sempre rebaixado
 COPY ./package.json ./
 RUN npm install
 COPY ./ ./
 
 CMD ["npm","run","start"]
-#CMD ["npm","run","start"]
