--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "usr_crt",
+  "name": "api_registro",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -13,12 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "ejs": "^3.1.5",
     "express.js": "^1.0.0",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
-    "pg": "8.7.1",
-    "redis": "4.0.0-next.5"
+    "pg": "8.7.1"
   },
   "devDependencies": {
     "@types/pg": "^8.6.1"
