--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,35 @@
 sudo: required
 services:
-  - docker
+- docker
 before_install:
-  - docker build -t borba/app -f Dockerfile.dev .
-  # - docker build -t borba/app -f ./client/Dockerfile.dev ./client
-  # - docker-compose build
+  - wget -qO- https://toolbelt.heroku.com/install.sh | sh
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - echo "$HEROKU_PASSWORD" | docker login -u "$HEROKU_USERNAME" --password-stdin registry.heroku.com
 script:
-  # - docker-compose run -d server npm run start
-  # - docker-compose run -e CI=true client npm run test
-  - docker run -e CI=true borba/app npm run test # test
-  # test?
+  # client
+  - docker build -t $DOCKER_USERNAME/docker_client ./client;
+  - docker tag $DOCKER_USERNAME/docker_client registry.heroku.com/$HEROKU_CLIENT/web;
+  # Api
+  - docker build -t $DOCKER_USERNAME/docker_api ./api;
+  - docker tag $DOCKER_USERNAME/docker_api registry.heroku.com/$HEROKU_API/web;
+  # Nginx
+  - docker build -t $DOCKER_USERNAME/docker_nginx ./nginx;
+  - docker tag $DOCKER_USERNAME/docker_nginx registry.heroku.com/$HEROKU_NGINX/web;
 deploy:
-  provider: elasticbeanstalk
-  region: "us-east-1"
-  app: "docker"
-  env: "Docker-env-1"
-  bucket_name: "elasticbeanstalk-us-east-1-182321959582"
-  bucket_path: "docker"
+  provider: script
+  script: 
+    # Client
+    docker push $DOCKER_USERNAME/docker_client; 
+    docker push registry.heroku.com/$HEROKU_CLIENT/web;
+    heroku container:release web --app $HEROKU_CLIENT; 
+    # Api
+    docker push $DOCKER_USERNAME/docker_api;
+    docker push registry.heroku.com/$HEROKU_API/web; 
+    heroku container:release web --app $HEROKU_API; 
+    # Nginx
+    docker push $DOCKER_USERNAME/docker_nginx; 
+    docker push registry.heroku.com/$HEROKU_NGINX/web;
+    heroku container:release web --app $HEROKU_NGINX;
   on:
-    branch: main
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
-
+    branch: heroku-deploy 
+  
