--- a/nginx/default_dev.conf
+++ b/nginx/default_dev.conf
@@ -1,17 +1,16 @@
 upstream client {
-  server $HEROKU_CLIENT_URL;
+  server client:3000;
 }
 
 upstream api {
-  server $HEROKU_API_URL;
+  server api:9000;
 }
 
 server {
-  listen $PORT;
+  listen 80;
 
   location / {
     proxy_pass http://client;
-    proxy_set_header Host $HEROKU_CLIENT_URL;
   }
 
   location /sockjs-node {
@@ -24,6 +23,5 @@ server {
   location /api {
     rewrite /api/(.*) /$1 break;
     proxy_pass http://api;
-    proxy_set_header Host $HEROKU_API_URL;
   }
 }
