--- a/node-react/docker-compose.yml
+++ b/node-react/docker-compose.yml
@@ -26,5 +26,7 @@ services:
             dockerfile: Dockerfile.dev
         ports: 
             - "8000:80"
-            
+        depends_on: 
+            - client
+            - api
     
