--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -20,10 +20,10 @@ services:
         volumes:
             - ./client/php/src:/var/www/html
         environment: 
-            - hostname=us-cdbr-east-04.cleardb.com
-            - user=b4b78724dfa36d
-            - password=55c1e22b
-            - db=heroku_a166eef70043d0b
+            - hostname=#
+            - user=#
+            - password=#
+            - db=#
     nginx:
         restart: always
         build: 
