preparar para branch

--- a/node-react/.gitignore
+++ b/node-react/.gitignore
@@ -1,5 +1,5 @@
 node_modules
 .eslintcache
-./client/.eslintcache
-./node-react/client2
-./node-react/client3
+/client/.eslintcache
+/client2/
+/client3/
