--- a/flask-react/api/Dockerfile.dev
+++ b/flask-react/api/Dockerfile.dev
@@ -9,5 +9,5 @@ RUN apk add --no-cache --virtual .build-deps g++ python3-dev libffi-dev openssl-
 RUN pip install -r requirements.txt
 RUN chmod +x ./flask-run.sh
 
-CMD ["python3.6","./app.py"]
+CMD ["python3.6","-u","./app.py"]
 
