--- a/flask-react/client/package.json
+++ b/flask-react/client/package.json
@@ -7,10 +7,21 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "0.18.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "4.3.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "web-vitals": "^2.1.2",
+    "@mui/material":"^5.0.6",
+    "@mui/styled-engine-sc":"^5.0.4",
+    "styled-components":"^5.3.3",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/system":"^5.0.6",
+    "@fontsource/roboto": "^4.5.1",
+    "@mui/icons-material": "5.0.5"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,7 +30,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": ["react-app",
+    "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
