--- a/php/.travis.yml
+++ b/php/.travis.yml
@@ -12,6 +12,9 @@ script:
     # Server
   - docker build -t $DOCKER_USERNAME/docker_api ./api;
   - docker tag $DOCKER_USERNAME/docker_api registry.heroku.com/$HEROKU_API/web;
+    # Client
+  - docker build -t $DOCKER_USERNAME/docker_client ./client;
+  - docker tag $DOCKER_USERNAME/docker_client registry.heroku.com/$HEROKU_CLIENT/web;
     # Nginx
   - docker build -t $DOCKER_USERNAME/docker_nginx ./nginx;
   - docker tag $DOCKER_USERNAME/docker_nginx registry.heroku.com/$HEROKU_NGINX/web;
@@ -21,6 +24,10 @@ deploy:
     docker push $DOCKER_USERNAME/docker_api;
     docker push registry.heroku.com/$HEROKU_API/web; 
     heroku container:release web --app $HEROKU_API; 
+
+    docker push $DOCKER_USERNAME/docker_client;
+    docker push registry.heroku.com/$HEROKU_CLIENT/web; 
+    heroku container:release web --app $HEROKU_CLIENT; 
 
     docker push $DOCKER_USERNAME/docker_nginx; 
     docker push registry.heroku.com/$HEROKU_NGINX/web;
