--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -2,23 +2,23 @@ version: "3"
 services:
     # O composer serve apenas quando for rodar testes na api ou no server com o client
     # Virou Api por causa do nginx, ele tem uma keyword 'server' já implantada e poderia ocorrer incompatibilidade
-    api:
-        stdin_open: true
-        build: 
-            context: "./api"
-            dockerfile: Dockerfile.dev
-        restart: on-failure
-        volumes: 
-            - /api/node_modules
-            - ./api:/api
+    # api:
+    #     stdin_open: true
+    #     build: 
+    #         context: "./api"
+    #         dockerfile: Dockerfile.dev
+    #     restart: on-failure
+    #     volumes: 
+    #         - /api/node_modules
+    #         - ./api:/api
     client:
         stdin_open: true
         build:
-            context: "./client/apache-server"
+            context: "./nginx/client/"
             dockerfile: Dockerfile.dev
         restart: on-failure
         volumes:
-            - ./client/php/src:/var/www/html
+            - ./nginx/client/src:/var/www/src
         environment: 
             - hostname=#
             - user=#
@@ -29,9 +29,12 @@ services:
         build: 
             context: ./nginx
             dockerfile: Dockerfile.dev
+        volumes:
+            - ./nginx/client/src:/var/www/src
+            - ./nginx/default_dev.conf:/etc/nginx/conf.d/default.conf
         ports: 
             - "8000:80"
         depends_on: 
-            - api
+            # - api
             - client
     
