--- a/php/nginx/default_dev.conf
+++ b/php/nginx/default_dev.conf
@@ -1,27 +1,27 @@
 upstream client {
-  server client:80;
+  server client:9000;
 }
 
 upstream api {
-  server api:9000;
+  server api:5000;
 }
 
 server {
   listen 80;
+  root /var/www/src;
 
   location / {
-    proxy_pass http://client;
+    root /var/www/src;
+    try_files $uri /index.php;
+    index index.php index.html;
   }
 
-  location /sockjs-node {
-    proxy_pass http://client;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-  }
-
-  location /api {
-    rewrite /api/(.*) /$1 break;
-    proxy_pass http://api;
+  location ~* \.php$ {
+    root /var/www/src;
+    fastcgi_pass client;
+    fastcgi_index index.php;
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param PATH_INFO $fastcgi_path_info;
   }
 }
